# Vibik.ModeratorPanel

./: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: __init__.py  auth_middleware.py  config.py  middleware.py
src/Settings/: settings.py
src/api/: app.py  photo_client.py
src/api/routes/: notify.py
src/api/schemas/: notify.py
src/app/: bot.py  notify_server.py
src/bot/: bot.py
src/bot/handlers/: metrics.py  moderator.py
src/bot/keyboards/: common_kb.py
src/bot/middleware/: __init__.py  auth.py  moderation_client.py
src/bot/states/: moderator_state.py
src/bot/texts/: auth_text.py  common_text.py  moderation_text.py
src/common/: photo.py  task.py
src/common/models/: metric_model.py  metrics_list_model.py  moderation_task.py  photo_model.py  task_extended_info.py
src/core/: config.py
src/handlers/: metrics.py  moderator.py
src/keyboards/: common_kb.py
src/middleware/: __init__.py  auth.py  moderation_client.py
src/moderation/: __init__.py  client.py
src/moderation/models/: __init__.py  auth.py  metrics.py  task.py
src/settings/: settings.py
src/states/: actions.py  moderator_state.py
src/texts/: auth_text.py  common_text.py  moderation_text.py
src/utilities/: metrics_visualization.py
