[project]
name = "vibik-moderatorpanel"
version = "0.1.0"
description = ""
authors = [
    {name = "Илья Котов",email = "roskets801@gmail.com"}
]
[tool.poetry.dependencies]
python = ">=3.12, <3.14"
[dependency-groups]
dev = [
    "black (>=26.3.1,<27.0.0)",
    "mypy (>=1.20.1,<2.0.0)"
]

[tool.black]
line-length = 120
target-version = ['py312']
skip-string-normalization = true